style: set 1rem = 10px

--- a/global.css
+++ b/global.css
@@ -57,3 +57,15 @@ table {
   height: 1px;
   clip: rect(1px, 1px, 1px, 1px);
 }
+
+/*==========================================
+	misc
+==========================================*/
+
+/* set: 1rem = 10px */
+html {
+  font-size: 62.5%;
+}
+body {
+  font-size: 1rem;
+}
