--- a/index.css
+++ b/index.css
@@ -1,15 +1,11 @@
-:root {
-  --background: #131619;
-  --font:"Heebo", sans-serif;
-  --fontBlack: #000;
-  --fontWhite: #FFF;
-}
 
 body {
   background-color: var(--background);
-  /* overflow-x: hidden; */
 }
 
+button { cursor: pointer; }
+
+/* header */
 header {
   position: relative;
   box-sizing: border-box;
@@ -17,117 +13,57 @@ header {
   justify-content: space-between;
   width: 100%;
   padding: 0 3.2rem;
-  h1 {
-    margin: 3.25rem ;
-    img {
-      width: 13.5rem;
-      height: 2.5rem;
-    }
-  }
-  .gnb {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform:translate(-50%,-50%);
-    ul {
-      display: flex;
-      align-items: center;
-      gap: 6.3rem;
-      height: 100%;
-      li {
-        a {
-          font-family: var(--font);
-          font-size: 1.2rem;
-          color: var(--fontWhite);
-          font-weight: 700;
-          line-height: 1.8rem; /* 150% */
-          letter-spacing: 0.12rem;
-          text-transform: uppercase;
-          text-decoration: none;
-        }
-      }
-    }
-  }
-  .utility {
-    display: flex;
-    align-items: center;
-    gap: 3.9rem;
-    button {
-      cursor: pointer;
-    }
-    .btn-book {
-      padding: 0.7rem 2.6rem;
-      border-radius: 3rem;
-      font-family: var(--font);
-      color: var(--fontBlack);
-      font-size: 1.2rem;
-      font-weight: 700;
-      line-height: 2.4rem; /* 200% */
-      letter-spacing: 0.12rem;
-      text-transform: uppercase;
-    }
-    .btn {
-      display: flex;
-      width: 4rem;
-      height: 4rem;
-      justify-content: center;
-      align-items: center;
-      background-color: transparent;
-      border: none;
-    }
-  }
 }
 
-main {
-  section {
-    .slide {
-      width: 100%;
-      aspect-ratio: 2/1;
-      .slide__information {
-        box-sizing: border-box;
-        display: grid;
-        width: 100%;
-        padding: 0 7rem;
-        height: 100%;
-        grid-template-columns: auto 1fr;
-        grid-template-rows: 1fr auto;
-        row-gap: 3.2rem;
-        .img_slide {
-          grid-row: 1/2;
-          grid-column: 1/2;
-          align-self: end;
-          margin-left: 5rem;
-          img {
-            width: 19.4rem;
-            height: 19.4rem;
-          }
-        }
-        .slide-small-text {
-          grid-row: 1/2;
-          grid-column: 2/3;
-          align-self: end;
-          margin-left: 3rem;
-          color: var(--fontWhite);
-          font-family: var(--font);
-          font-size: 3rem;
-          font-weight: 700;
-          line-height: 3.8rem; /* 126.667% */
-          text-transform: uppercase;
-        }
-        .slide-big-text {
-          grid-row: 2/3;
-          grid-column: 1/3;
-          color: var(--fontWhite);
-          font-family: var(--font);
-          font-size: 36rem;
-          font-weight: 700;
-          line-height: 25.6rem; 
-          text-transform: uppercase;
-          grid-column: 1/3;
-          grid-row: 2/3;
-          translate: 0 1.1rem ;
-        }
-      
-    }
-  }
+/* header h1 */
+header > h1 { margin: 3.25rem ;}
+header > h1 > img { width: 13.5rem; height: 2.5rem; }
+
+/* header gnb */
+header > .gnb {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%,-50%);
+}
+header > .gnb > ul {
+display: flex;
+align-items: center;
+gap: 6.3rem;
+height: 100%;
+}
+header > .gnb > ul > li > a {
+  font-family: var(--font);
+  font-size: 1.2rem;
+  color: var(--fontWhite);
+  font-weight: 700;
+  line-height: 1.8rem; /* 150% */
+  letter-spacing: 0.12rem;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+header > .utility {
+  display: flex;
+  align-items: center;
+  gap: 3.9rem;  
+}
+header > .utility > .btn-book {
+  padding: 0.7rem 2.6rem;
+  border-radius: 3rem;
+  color: var(--fontBlack);
+  font-family: var(--font);
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 2.4rem; /* 200% */
+  letter-spacing: 0.12rem;
+  text-transform: uppercase;
+}
+header > .utility > .btn {
+  display: flex;
+  width: 4rem;
+  height: 4rem;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
 }
