--- a/global.css
+++ b/global.css
@@ -72,9 +72,14 @@ body {
 
 /* prevent horizontal scroll */
 html, body {
-	width: 100%;
-	box-sizing: border-box;
+  width: 100%;
 }
+
+/* box sizing at border box */
+* {
+  box-sizing: border-box;
+}
+
 
 :root {
   --background: #131619;
