style: add split sections

--- a/index.css
+++ b/index.css
@@ -1,9 +1,26 @@
+/* @@@@@@@@@@@@@@@@@@ */
+
+:root {
+  --background: #131619;
+  --font: "Heebo", sans-serif;
+  --altFont: "Yantramanav", serif;
+  --fontBlack: #000;
+  --fontWhite: #FFF;
+  --fontGrey: #c4c4c4;
+  --bgWhite: #FFF;
+  --bgBlack: #000;
+	--pointColor: #affe02;
+}
+
+/* @@@@@@@@@@@@@@@@@@ */
+
 body {
   background-color: var(--background);
   --header-size: 9rem;
 }
 
 button { cursor: pointer; }
+
 /* header */
 header {
   position: relative;
@@ -68,64 +85,195 @@ header > .utility > .btn {
 }
 
 /* main */
-main {}
-section {}
-
-/* slider section */
-.slide-wrapper {
-  width: 100%;
-  height: calc(100vh - 9rem);
-  border: 1px solid blue;
+.section-hero {
+  .slide-wrapper {
+    width: 100%;
+    height: calc(100vh - 9rem);
+    border: 1px solid blue;
+    .slide {}
+    .slide-information {
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+      padding: 0 7rem;    
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      .slide--upper-wrapper {
+        display: flex;
+        width: 100%;
+        flex-grow: 1;
+        align-items: end;
+        .slide--img {
+          img { width: 19.4rem; height: 19.4rem;}
+        }
+        .slide--small-text {
+          margin-left: 3rem;
+          color: var(--fontWhite);
+          font-family: var(--font);
+          font-size: 3rem;
+          font-weight: 700;
+          line-height: 3.8rem; /* 126.667% */
+          text-transform: uppercase;
+        }
+      }
+      .slide--big-text {
+        width: 100%;
+        height: 35rem;
+        color: var(--fontWhite);
+        font-family: var(--font);
+        font-size: 36rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        margin-bottom: 7rem;
+      }
+      .slide__bullet {
+        position: absolute;
+        bottom: 3.7rem;
+        left: 50%;
+        transform: translate(-50% 50%);
+        img {
+          width: 5.8rem;
+          height: 1rem;
+        }
+      }
+    }
+  }
 }
-.slide {}
-.slide-information {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  padding: 0 7rem;    
+
+.section-split {
+  width: 130rem;
+  height: 63rem;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  position: relative;
+  justify-content: space-between;
+  .split--text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    .lg-text {
+      width: 48.1416rem;
+      height: 11.1rem;
+      color: #FFF;
+      font-family: var(--font);
+      font-size: 4rem;
+      font-weight: 700;
+      line-height: 5.2rem; /* 130% */
+      text-transform: uppercase;
+      margin-bottom: 1.4rem;
+      position: relative;
+      &::before {
+        content: "";
+        background-image: url(images/ico_plus.svg);
+        width: 2.6rem;
+        height: 4rem;
+        display: inline-block;
+        position: absolute;
+        left: -0.8rem;
+        top: 0.1rem;
+        translate: -100% 0;
+      }
+      &::after {
+        content: "";
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: #404040;
+        font-family: var(--altFont);
+        font-size: 11.2rem;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 11.2rem; /* 100% */
+        text-transform: uppercase;
+        color: transparent;
+        position: absolute;
+        height: 14.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: -4.5rem;
+        left: -7rem;
+        z-index: -1;
+      }
+    }
+    .sm-text {
+      color: var(--fontGrey);
+      font-family: var(--font);
+      font-size: 1.6rem;
+      font-weight: 300;
+      line-height: 2.8rem; /* 175% */
+      letter-spacing: 0.08rem;
+      margin-bottom: 3.4rem;
+    }
+    .bnt-viewMore {
+      display: inline-flex;
+      padding: 1.4rem 8.1rem 1.4rem 3.1rem;
+      align-items: flex-start;
+      border-radius: 3rem;
+      border: 1px solid var(--fontWhite);
+      position: relative;
+      cursor: pointer;
+      span {
+        color: var(--fontWhite);
+        font-family: var(--font);
+        font-size: 1.3rem;
+        font-weight: 700;
+        line-height: 2.6rem; /* 200% */
+        letter-spacing: 0.13rem;
+        text-transform: uppercase;
+      }
+      img {
+        display: flex;
+        width: 5.4rem;
+        height: 5.4rem;
+        padding: 1.07rem;
+        justify-content: center;
+        align-items: center;
+        border-radius: 2.7rem;
+        border: 1px solid var(--fontWhite);
+        position: absolute;
+        right: 0rem;
+        top: 0;
+      }
+    }
+  }
+  .split--img {
+    width: 51.8rem;
+    height: 76.0156rem;
+  }
 }
-.slide--upper-wrapper {
-  display: flex;
-  width: 100%;
-  flex-grow: 1;
-  align-items: end;
+#first {
+  .split--text {
+    margin-left:3.5rem;
+  }
+  .split--img {
+    margin-right: 6rem;
+    translate: 0 -6rem;
+  }
+  .lg-text::after {
+    content: "STRONg";
+  }
+  .sm-text {
+    width: 39rem;
+    height: 5.2rem;
+  }
 }
-.slide--img {
-}
-.slide--img > img { width: 19.4rem; height: 19.4rem;}
 
-.slide--small-text {
-  margin-left: 3rem;
-  color: var(--fontWhite);
-  font-family: var(--font);
-  font-size: 3rem;
-  font-weight: 700;
-  line-height: 3.8rem; /* 126.667% */
-  text-transform: uppercase;
+
+#second {
+  justify-content: flex-start;
+  .split--text {
+    margin-left: 17.2rem;
+  }
+  .split--img {
+    translate: 0 -6.5rem;
+  }
+  .lg-text::after {
+    content: "Start";
+  }
+  .sm-text {
+    width: 40.1rem;
+    height: 5.2rem;
+  }
 }
 
-.slide--big-text {
-  width: 100%;
-  height: 35rem;
-  color: var(--fontWhite);
-  font-family: var(--font);
-  font-size: 36rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  border: 1px solid blue;
-  margin-bottom: 7rem;
-}
 
-.slide__bullet {
-  position: absolute;
-  bottom: 3.7rem;
-  left: 50%;
-  transform: translate(-50% 50%);
-}
-.slide__bullet > img {
-  width: 5.8rem;
-  height: 1rem;
-}
