--- a/index.css
+++ b/index.css
@@ -315,6 +315,73 @@ header > .utility > .btn {
   }
 }
 
+.section-joinUs {
+  width: 100%;
+  height: 90rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  background: url(images/joinUs_img.png) no-repeat;
+  position: relative;
+  > img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 96rem;
+    height: 60rem;
+  }
+  .joinUs--play {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border: 1px solid white;
+    border-radius: 50%;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20rem;
+    height: 20rem;
+    span {
+      color: var(--fontWhite);
+      font-family: var(--font);
+      font-size: 1.4rem;
+      font-weight: 700;
+      position: relative;
+      img {
+        width: 3.2rem;
+        height: 3.3rem;
+        position: absolute;
+        left: 100%;
+        bottom: -50%;
+      }
+    }
+  }
+  .joinUs--text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    span {
+      width: 68.015rem;
+      height: 26.5rem;
+      color: #FFF;
+      text-align: center;
+      font-family: var(--font);
+      font-size: 18rem;
+      font-weight: 700;
+      line-height: 21.6rem; /* 120% */
+      text-transform: uppercase;
+    }
+    img {
+      width: 12.7078rem;
+      height: 12.7078rem;
+    }
+    translate: 0 15.5rem;
+  }
+}
+
 
 
 
