--- a/index.css
+++ b/index.css
@@ -163,35 +163,12 @@ header > .utility > .btn {
       margin-bottom: 3.4rem;
     }
     .bnt-viewMore {
-      display: inline-flex;
       padding: 1.4rem 8.1rem 1.4rem 3.1rem;
-      align-items: flex-start;
-      border-radius: 3rem;
-      border: 1px solid var(--fontWhite);
-      position: relative;
-      cursor: pointer;
-      span {
-        color: var(--fontWhite);
-        font-family: var(--font);
-        font-size: 1.3rem;
-        font-weight: 700;
-        line-height: 2.6rem; /* 200% */
-        letter-spacing: 0.13rem;
-        text-transform: uppercase;
-      }
-      img {
-        display: flex;
-        width: 5.4rem;
-        height: 5.4rem;
-        padding: 1.07rem;
-        justify-content: center;
-        align-items: center;
-        border-radius: 2.7rem;
-        border: 1px solid var(--fontWhite);
-        position: absolute;
-        right: 0rem;
-        top: 0;
-      }
+      font-size: 1.3rem;
+      font-weight: 700;
+      line-height: 2.6rem; /* 200% */
+      letter-spacing: 0.13rem;
+      text-transform: uppercase;
     }
   }
   .split--img {
@@ -200,6 +177,7 @@ header > .utility > .btn {
   }
 }
 
+/* 공통  */
 .lg-text {
   color: var(--fontWhite);
   font-family: var(--font);
@@ -242,6 +220,35 @@ header > .utility > .btn {
   }
 }
 
+.btn-arrow {
+  position: relative;
+  display: inline-flex;
+  align-items: flex-start;
+  border-radius: 3rem;
+  border: 1px solid var(--fontWhite);
+  cursor: pointer;
+  color: var(--fontWhite);
+  font-family: var(--font);
+
+  &::after {
+    content: "";
+    background: url("images/ico_viewMore.svg") no-repeat;
+    background-position: center center;
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    width: 5.4rem;
+    height: 5.4rem;
+    border-radius: 2.7rem;
+    position: absolute;
+    right: 0;
+    top: -.1rem;
+    border: 1px solid var(--fontWhite);
+  }
+}
+
+
+/*  */
 #first {
   .split--text {
     margin-left:3.5rem;
@@ -366,41 +373,86 @@ header > .utility > .btn {
 
 .section-form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 130rem;
   margin: 0 auto;
-  margin-top: 15.5rem;
+  margin-bottom: 15rem;
   height: 34.8rem;
-  background-color: red;
-  
-  .joinUs--text {
+  .title-text {
+    height: 21.6rem;
     display: flex;
     justify-content: center;
     align-items: center;
     span {
-      width: 68.015rem;
-      height: 26.5rem;
-      color: #FFF;
+      color: var(--fontWhite);
       text-align: center;
       font-family: var(--font);
       font-size: 18rem;
       font-weight: 700;
       line-height: 21.6rem; /* 120% */
       text-transform: uppercase;
+      margin-right: 2.5rem;
     }
     img {
       width: 12.7078rem;
       height: 12.7078rem;
     }
-    translate: 0 15.5rem;
+    translate: 0 calc(-100% + 13rem);
   }
-
   .lg-text {
+    font-size: 6rem;
+    margin-bottom: 3rem;
+    &&::after {
+      font-size: 18rem;
+      line-height: 18rem; /* 100% */
+      content: "go!";
+      left: 3.5rem;
+    }
   }
-  .sm-text {}
+  .sm-text {
+      width: 45.1681rem;
+      height: 2.9rem;
+      color: var(--fontWhite);
+      font-family: var(--font);
+      font-size: 2rem;
+      font-weight: 300;
+      line-height: 3.3rem; /* 165% */
+      text-transform: uppercase;
+      margin-bottom: 5.2rem;
+  }
   .input-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    input {
+      color: white;
+      background-color: transparent;
+      display: inline-flex;
+      padding: 1.5rem 2.5rem;
+      align-items: flex-start;
+      color: var(--fontGrey);
+      font-family: var(--font);
+      font-size: 1.6rem;
+      font-weight: 300;
+      letter-spacing: 0.08rem;
+      border-radius: 3rem;
+      border: 1px solid #404040;
+    }
     #input-name {}
     #input-email {}
-    #btn-subscribe {}
+    #btn-subscribe {
+      padding: 1.4rem 8.0938rem 1.4rem 3.1rem;
+      color: var(--fontWhite);
+      text-align: center;
+      font-family: var(--font);
+      font-size: 1.3rem;
+      font-weight: 700;
+      line-height: 2.6rem; /* 200% */
+      letter-spacing: 0.13rem;
+      text-transform: uppercase;
+    }
   }
 }
 
