--- a/index.css
+++ b/index.css
@@ -440,8 +440,6 @@ header > .utility > .btn {
       border-radius: 3rem;
       border: 1px solid #404040;
     }
-    #input-name {}
-    #input-email {}
     #btn-subscribe {
       padding: 1.4rem 8.0938rem 1.4rem 3.1rem;
       color: var(--fontWhite);
@@ -502,5 +500,43 @@ header > .utility > .btn {
       letter-spacing: 0.13rem;
       text-transform: uppercase;
     }
+  }
+}
+
+.section-family {
+  /* margin-top: 13.2rem; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80rem;
+  .lg-text {
+    font-size: 6rem;
+    /* margin-bottom: 3rem; */
+    line-height: 7.2rem; /* 120% */
+    &&::after {
+      font-size: 18rem;
+      line-height: 18rem; /* 100% */
+      content: "part";
+      left: 50%;
+      transform: translate(-50%, 0);
+    }
+  }
+  .sm-text {
+    color: var(--fontWhite);
+    font-family: var(--font);
+    font-size: 2rem;
+    font-weight: 300;
+    line-height: 3.3rem; /* 165% */
+    text-transform: uppercase;
+    margin-bottom: 6.2rem;
+  }
+  .image-wrapper {
+    width: 100%;
+    display: flex;
+    gap: 2.6rem;
+    overflow: hidden;
+    height: 48rem;
   }
 }
