--- a/index.css
+++ b/index.css
@@ -249,6 +249,21 @@ header > .utility > .btn {
   }
 }
 
+input {
+  color: white;
+  background-color: transparent;
+  display: inline-flex;
+  padding: 1.5rem 2.5rem;
+  align-items: flex-start;
+  color: var(--fontGrey);
+  font-family: var(--font);
+  font-size: 1.6rem;
+  font-weight: 300;
+  letter-spacing: 0.08rem;
+  border-radius: 3rem;
+  border: 1px solid #404040;
+  outline: none;
+}
 
 /*  */
 #first {
@@ -406,12 +421,10 @@ header > .utility > .btn {
   .lg-text {
     font-size: 6rem;
     margin-bottom: 3rem;
-    border: 1px solid red;
     &::before {
       width: 3.4rem;
       transform: translate(0,-50%);
       top: 0.4rem;
-      border: 1px solid red;
     }
     &::after {
       font-size: 18rem;
@@ -436,20 +449,7 @@ header > .utility > .btn {
     display: flex;
     justify-content: center;
     gap: 2rem;
-    input {
-      color: white;
-      background-color: transparent;
-      display: inline-flex;
-      padding: 1.5rem 2.5rem;
-      align-items: flex-start;
-      color: var(--fontGrey);
-      font-family: var(--font);
-      font-size: 1.6rem;
-      font-weight: 300;
-      letter-spacing: 0.08rem;
-      border-radius: 3rem;
-      border: 1px solid #404040;
-    }
+
     #btn-subscribe {
       padding: 1.4rem 8.0938rem 1.4rem 3.1rem;
       color: var(--fontWhite);
@@ -474,7 +474,6 @@ header > .utility > .btn {
     img  {
       width: 100%;
       height: 100%;
-
     }
   }
   .text-wrapper {
@@ -528,8 +527,7 @@ header > .utility > .btn {
     &::before {
       width: 3.4rem;
       transform: translate(0,-50%);
-      top: 0.4rem;
-      border: 1px solid red;
+      top: 1.5rem;
     }
     &&::after {
       font-size: 18rem;
@@ -556,3 +554,118 @@ header > .utility > .btn {
     height: 48rem;
   }
 }
+
+.section-bmi {
+  width: 130rem;
+  height: 72.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  .text-wrapper {
+    .lg-text {
+      &::after {
+        content: "BMI";
+    } 
+    }
+    .sm-text {
+      color: var(--fontGrey);
+      font-family: var(--font);
+      font-size: 1.6rem;
+      font-weight: 300;
+      line-height: 2.8rem; /* 175% */
+      letter-spacing: 0.08rem;
+      margin-bottom: 3.1rem;
+    }
+    .input-wrapper {
+      display: grid;
+      column-gap: 3rem;
+      row-gap: 1.8rem;
+      grid-template-columns: 1fr 1fr;
+      width: 62.7rem;
+      flex-shrink: 0;
+      margin-bottom: 2.6rem;
+      
+      input:last-of-type {
+        grid-column: 1/3;
+      }
+    }
+    #btn-bmiCalculate {
+      background-color: transparent;
+      display: inline-flex;
+      padding: 1.4rem 8.07rem 1.4rem 3.1rem;
+      align-items: flex-start;
+      border-radius: 3rem;
+      border: 1px solid #FFF;
+      color: #FFF;
+      font-size: 1.3rem;
+      line-height: 2.6rem; /* 200% */
+      letter-spacing: 0.13rem;
+      text-transform: uppercase;
+    }
+  }
+  .bmi-wrapper {
+    width: 61rem;
+    height: 61rem;
+    background-color: var(--bgBlack);
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10.6rem 12.86rem;
+
+    .table {
+      width: 100%;
+      .row {
+        height: 6.6rem;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid #707070;
+        &:last-of-type{
+          border-bottom: none;
+        }
+      }
+      .cell  {
+        display: flex;
+        /* justify-content: center; */
+        align-items: center;
+        width: 100%;
+        color: var(--fontGrey);
+        font-family: var(--font);
+        font-size: 1.6rem;
+        font-weight: 300;
+        line-height: 2.8rem; /* 175% */
+        letter-spacing: 0.08rem;
+        &:last-of-type{
+          padding-left: 3.2rem;
+          border-left: 1px solid #707070;
+        }
+      }
+      .header > .cell {
+        color: var(--fontWhite);
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+    }
+
+    span {
+      margin-top: 3.3rem;
+      width: 100%;
+      color: var(--fontWhite);
+      font-family: var(--font);
+      font-size: 1.4rem;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 2.5rem;
+      letter-spacing: 0.08rem;
+      strong {
+        font-size: 1.6rem;
+        font-weight: 700;
+      }
+    }
+  }
+}
+
+
