--- a/index.css
+++ b/index.css
@@ -19,6 +19,14 @@ body {
   --header-size: 9rem;
 }
 
+* {
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-drag: none;
+  -ms-user-drag: none;
+  user-drag: none;
+}
+
 button { cursor: pointer; }
 
 /* header */
@@ -85,7 +93,6 @@ header > .utility > .btn {
   .slide-wrapper {
     width: 100%;
     height: calc(100vh - 9rem);
-    border: 1px solid blue;
     .slide {}
     .slide-information {
       box-sizing: border-box;
@@ -680,10 +687,12 @@ footer {
     row-gap: 6.25rem;
     column-gap: 6.9rem;
     #logo {
+      margin-top: 14.1rem;
       width: 27rem;
       height: 5rem;
     }
     .footer-body {
+      margin-top: 14.1rem;
       grid-column: 2/5;
       color: var(--fontWhite);
       font-family: var(--font);
@@ -695,7 +704,6 @@ footer {
     }
     .footer-item {
       height: 26.6rem;
-      /* margin-bottom: 8.7rem; */
     }
     .footer-item-title {
       color: var(--fontWhite);
@@ -746,8 +754,10 @@ footer {
           height: 100%;
         }
       }
-      input {
+      .btn-arrow {
         width: 100%;
+      }
+      input {
         border: none;
       }
     }
