--- a/index.css
+++ b/index.css
@@ -128,7 +128,6 @@ header {
 }
 header > h1 { margin: 3.25rem ;}
 header > h1 > img { width: 13.5rem; height: 2.5rem; }
-
 header > .gnb {
   position: absolute;
   top: 50%;
@@ -255,6 +254,7 @@ header > .utility > #hamburger {
   }
 }
 
+
 /* hero section */
 .section-hero {
   .slide-wrapper {
@@ -265,34 +265,48 @@ header > .utility > #hamburger {
       box-sizing: border-box;
       width: 100%;
       height: 100%;
-      padding: 0 7rem;    
+      padding: 0 3.6%;    
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      align-items: center;
       position: relative;
       .slide--upper-wrapper {
         display: flex;
         width: 100%;
         flex-grow: 1;
         align-items: end;
-        .slide--img {
-          img { width: 19.4rem; height: 19.4rem;}
+        .slide--image {
+          img { 
+            width: 14vw;
+            height: 14vw;
+            max-width: 19.4rem;
+            max-height: 19.4rem;
+          }
         }
         .slide--small-text {
           margin-left: 3rem;
           color: var(--fontWhite);
           font-family: var(--font);
           font-size: 3rem;
+          /* font-size: clamp(1rem, 1.57vw, 3rem); */
           font-weight: 700;
-          line-height: 3.8rem; /* 126.667% */
+          line-height: 126.667%;
           text-transform: uppercase;
         }
       }
       .slide--big-text {
+        display: flex;
+        justify-content: flex-start;
+        align-items: ;
+        max-width: 100%;
         width: 100%;
-        height: 35rem;
+        max-height: 35rem;
+        height: fit-content;
         color: var(--fontWhite);
         font-family: var(--font);
         font-size: 36rem;
+        font-size: clamp(10rem, 18vw, 36rem);
         font-weight: 700;
         text-transform: uppercase;
         margin-bottom: 7rem;
@@ -310,6 +324,25 @@ header > .utility > #hamburger {
     }
   }
 }
+
+@media all and (max-width: 1300px) {
+  .section-hero {
+    .slide-wrapper {
+      .slide-information {
+        background-color: ;
+        .slide--image {
+          margin-bottom: 1rem;
+        }
+        .slide--small-text {
+          margin-left: 2rem;
+        }
+      }
+    }
+  }
+}
+
+@media all and (max-width: 1300px) and (min-width: 800px) {}
+@media all and (max-width: 800px) {}
 
 /* split section */
 .section-split {
