--- a/index.css
+++ b/index.css
@@ -240,7 +240,7 @@ header > .utility > #hamburger {
   #btn-hamburger {
     z-index: 12;
     /* position: fixed; */
-    right: 4rem;
+    right: 3.2rem;
   }
   /* utility . checked */
   header > .utility:has(#hamburger:checked) > .btn-book {
@@ -311,15 +311,18 @@ header > .utility > #hamburger {
         text-transform: uppercase;
         margin-bottom: 7rem;
       }
-      .slide__bullet {
-        position: absolute;
-        bottom: 3.7rem;
-        left: 50%;
-        transform: translate(-50% 50%);
-        img {
-          width: 5.8rem;
-          height: 1rem;
-        }
+    }
+    .slide__bullet {
+      position: absolute;
+      bottom: 3.7rem;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 9;
+      padding: 0.8rem 1.6rem;
+      border-radius: 2rem;
+      img {
+        width: 5.8rem;
+        height: 1rem;
       }
     }
   }
@@ -339,14 +342,67 @@ header > .utility > #hamburger {
       }
     }
   }
+  #first {
+    .split--text {
+      padding-left: 3rem;
+    }
+  }
 }
 
 @media all and (max-width: 1300px) and (min-width: 800px) {}
-@media all and (max-width: 800px) {}
+@media all and (max-width: 800px) {
+  .section-split {
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;  
+    .split--img {
+      flex-grow: 1;
+    }
+  }
+  .section-split#first {
+    height: 100vh;
+    .split--text {
+      margin-left: 0;
+    }
+    .split--img {
+      margin-right: 0;
+      translate: 0 0;
+      width: 50rem;
+      height: 30rem;
+      overflow: hidden;
+      margin-bottom: 3rem;
+    }
+  }
+  .section-split#second  {
+    height: 100vh;
+    .split--text {
+      margin-left: 0;
+      padding-left: 3rem;
+    }
+    .split--img {
+      translate: 0 0;
+      width: 50rem;
+      height: 30rem;
+      overflow: hidden;
+    }
+  }
+
+  .section-family {display: none!important;}
+  .section-form {display: none!important;}
+  .section-map  {display: none!important;}
+  .section-partners {display: none!important;}
+  .section-video {display: none!important;}
+  .section-bmi {display: none!important;}
+  footer {
+    display: none!important;
+  }
+  
+}
 
 /* split section */
 .section-split {
-  width: 130rem;
+  max-width: 130rem;
+  width: 100%;
   height: 63rem;
   margin: 0 auto;
   display: flex;
