style: add common header

--- a/global.css
+++ b/global.css
@@ -96,3 +96,144 @@ html, body {
   --bgBlack: #000;
 	--pointColor: #affe02;
 }
+
+
+
+/*==========================================
+	header
+==========================================*/
+header {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: var(--header-size);
+  padding: 0 3.2rem;
+}
+header > h1 { margin: 3.25rem ;}
+header > h1 > img { width: 13.5rem; height: 2.5rem; }
+header > .gnb {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%,-50%);
+}
+header > .gnb > ul {
+  display: flex;
+  align-items: center;
+  gap: 6.3rem;
+  height: 100%;
+}
+header > .gnb > ul > li#bookNow {
+  display: none;
+}
+header > .gnb > ul > li > a {
+  font-family: var(--font);
+  font-size: 1.2rem;
+  color: var(--fontWhite);
+  font-weight: 700;
+  line-height: 1.8rem; /* 150% */
+  letter-spacing: 0.12rem;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+header > .utility {
+  display: flex;
+  align-items: center;
+  gap: 3.9rem;  
+}
+header > .utility > .btn-book {
+  padding: 0.7rem 2.6rem;
+  border-radius: 3rem;
+  color: var(--fontBlack);
+  font-family: var(--font);
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 2.4rem; /* 200% */
+  letter-spacing: 0.12rem;
+  text-transform: uppercase;
+}
+header > .utility .btn {
+  display: flex;
+  width: 4rem;
+  height: 4rem;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+}
+
+header > .utility > #hamburger {
+  display: none;
+}
+
+@media all and (max-width: 1300px) {
+  header > .gnb > ul {
+    gap: 3rem;
+  }
+}
+
+@media all and (max-width: 1300px) and (min-width: 800px) {
+    header > .utility > .btn-book {
+    background-color: transparent;
+    color: var(--fontWhite);
+    border-radius: 0;
+    border: none;
+    border-bottom: 2px solid var(--fontWhite);
+    padding: 0;
+  }
+}
+
+@media all and (max-width: 800px) {
+  body {
+    overflow-x: hidden;
+  }
+  /* gnb */
+  header > .gnb {
+    display: none;
+  }
+  header > .gnb > ul {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+  }
+  header > .gnb > ul  > li  {}
+  header > .gnb > ul > li > a {
+    font-size: 4rem;
+    line-height: 1;
+  }
+  /* gnb . checked */
+  header > .utility:has(#hamburger:checked) ~ .gnb {
+    display: block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100vw;
+    z-index: 10;
+    background-color: var(--background);
+    transform: translate(-50%,0);
+  }
+  /* utility */
+  header > .utility > .btn-book {
+    display: none;
+  }
+  #btn-hamburger {
+    z-index: 12;
+    /* position: fixed; */
+    right: 3.2rem;
+  }
+  /* utility . checked */
+  header > .utility:has(#hamburger:checked) > .btn-book {
+    display: inline-block;
+    z-index: 12;
+    position: fixed;
+    right: 10rem;
+  }
+  header > .utility:has(#hamburger:checked) > #btn-hamburger {
+    position: fixed;
+  }
+}
