--- a/index.css
+++ b/index.css
@@ -29,6 +29,25 @@ body {
 
 button { cursor: pointer; }
 
+/* 반응형 */
+html {
+  font-size: 62.5%;
+}
+body {
+  font-size: 1rem;
+}
+
+@media all and (max-width:1300px) {
+  html {
+    font-size: 52.5%;
+  }
+}
+
+@media all and (max-width:800px) {
+  html {
+  }
+}
+
 /* 공통  */
 .lg-text {
   color: var(--fontWhite);
@@ -74,7 +93,7 @@ button { cursor: pointer; }
   }
 }
 
-.btn-arrow {
+.btn--arrow {
   position: relative;
   display: inline-flex;
   align-items: flex-start;
@@ -83,8 +102,8 @@ button { cursor: pointer; }
   cursor: pointer;
   color: var(--fontWhite);
   font-family: var(--font);
-
-  &::after {
+  
+  &::after{
     content: "";
     background: url("images/ico_viewMore.svg") no-repeat;
     background-position: center center;
@@ -93,11 +112,19 @@ button { cursor: pointer; }
     align-items: center;
     width: 5.4rem;
     height: 5.4rem;
-    border-radius: 2.7rem;
+    border-radius: 50%;
     position: absolute;
     right: 0;
     top: -.1rem;
     border: 1px solid var(--fontWhite);
+    transform: rotate(0deg);
+    transition: transform 1s ease;
+  }
+
+  &:hover {
+    &::after {
+      transform: rotate(45deg);
+    }
   }
 }
 
@@ -116,144 +143,6 @@ input {
   border: 1px solid #404040;
   outline: none;
 }
-
-/* header */
-header {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: var(--header-size);
-  padding: 0 3.2rem;
-}
-header > h1 { margin: 3.25rem ;}
-header > h1 > img { width: 13.5rem; height: 2.5rem; }
-header > .gnb {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform:translate(-50%,-50%);
-}
-header > .gnb > ul {
-  display: flex;
-  align-items: center;
-  gap: 6.3rem;
-  height: 100%;
-}
-header > .gnb > ul > li#bookNow {
-  display: none;
-}
-header > .gnb > ul > li > a {
-  font-family: var(--font);
-  font-size: 1.2rem;
-  color: var(--fontWhite);
-  font-weight: 700;
-  line-height: 1.8rem; /* 150% */
-  letter-spacing: 0.12rem;
-  text-transform: uppercase;
-  text-decoration: none;
-}
-header > .utility {
-  display: flex;
-  align-items: center;
-  gap: 3.9rem;  
-}
-header > .utility > .btn-book {
-  padding: 0.7rem 2.6rem;
-  border-radius: 3rem;
-  color: var(--fontBlack);
-  font-family: var(--font);
-  font-size: 1.2rem;
-  font-weight: 700;
-  line-height: 2.4rem; /* 200% */
-  letter-spacing: 0.12rem;
-  text-transform: uppercase;
-}
-header > .utility .btn {
-  display: flex;
-  width: 4rem;
-  height: 4rem;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-}
-
-header > .utility > #hamburger {
-  display: none;
-}
-
-@media all and (max-width: 1300px) {
-  header > .gnb > ul {
-    gap: 3rem;
-  }
-}
-
-@media all and (max-width: 1300px) and (min-width: 800px) {
-    header > .utility > .btn-book {
-    background-color: transparent;
-    color: var(--fontWhite);
-    border-radius: 0;
-    border: none;
-    border-bottom: 2px solid var(--fontWhite);
-    padding: 0;
-  }
-}
-
-@media all and (max-width: 800px) {
-  body {
-    overflow-x: hidden;
-  }
-  /* gnb */
-  header > .gnb {
-    display: none;
-  }
-  header > .gnb > ul {
-    display: flex;
-    flex-direction: column;
-    gap: 5rem;
-    width: 100%;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-  }
-  header > .gnb > ul  > li  {}
-  header > .gnb > ul > li > a {
-    font-size: 4rem;
-    line-height: 1;
-  }
-  /* gnb . checked */
-  header > .utility:has(#hamburger:checked) ~ .gnb {
-    display: block;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 100vw;
-    z-index: 10;
-    background-color: var(--background);
-    transform: translate(-50%,0);
-  }
-  /* utility */
-  header > .utility > .btn-book {
-    display: none;
-  }
-  #btn-hamburger {
-    z-index: 12;
-    /* position: fixed; */
-    right: 3.2rem;
-  }
-  /* utility . checked */
-  header > .utility:has(#hamburger:checked) > .btn-book {
-    display: inline-block;
-    z-index: 12;
-    position: fixed;
-    right: 10rem;
-  }
-  header > .utility:has(#hamburger:checked) > #btn-hamburger {
-    position: fixed;
-  }
-}
-
 
 /* hero section */
 .section-hero {
@@ -349,7 +238,47 @@ header > .utility > #hamburger {
   }
 }
 
-@media all and (max-width: 1300px) and (min-width: 800px) {}
+/* split section */
+.section-split {
+  max-width: 130rem;
+  width: 100%;
+  height: 63rem;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  .split--text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    .lg-text {
+      width: 48.1416rem;
+      height: 11.1rem;
+    }
+    .sm-text {
+      color: var(--fontGrey);
+      font-family: var(--font);
+      font-size: 1.6rem;
+      font-weight: 300;
+      line-height: 2.8rem; /* 175% */
+      letter-spacing: 0.08rem;
+      margin-bottom: 3.4rem;
+    }
+    .bnt-viewMore {
+      padding: 1.4rem 8.1rem 1.4rem 3.1rem;
+      font-size: 1.3rem;
+      font-weight: 700;
+      line-height: 2.6rem; /* 200% */
+      letter-spacing: 0.13rem;
+      text-transform: uppercase;
+    }
+  }
+  .split--img {
+    width: 51.8rem;
+    height: 76.0156rem;
+  }
+}
+
 @media all and (max-width: 800px) {
   .section-split {
     flex-direction: column;
@@ -394,49 +323,7 @@ header > .utility > #hamburger {
   .section-video {display: none!important;}
   .section-bmi {display: none!important;}
   footer {
-    display: none!important;
-  }
-  
-}
-
-/* split section */
-.section-split {
-  max-width: 130rem;
-  width: 100%;
-  height: 63rem;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  .split--text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    .lg-text {
-      width: 48.1416rem;
-      height: 11.1rem;
-    }
-    .sm-text {
-      color: var(--fontGrey);
-      font-family: var(--font);
-      font-size: 1.6rem;
-      font-weight: 300;
-      line-height: 2.8rem; /* 175% */
-      letter-spacing: 0.08rem;
-      margin-bottom: 3.4rem;
-    }
-    .bnt-viewMore {
-      padding: 1.4rem 8.1rem 1.4rem 3.1rem;
-      font-size: 1.3rem;
-      font-weight: 700;
-      line-height: 2.6rem; /* 200% */
-      letter-spacing: 0.13rem;
-      text-transform: uppercase;
-    }
-  }
-  .split--img {
-    width: 51.8rem;
-    height: 76.0156rem;
+    /* display: none!important; */
   }
 }
 
@@ -842,105 +729,154 @@ header > .utility > #hamburger {
     }
   }
 }
+/* footer */
 
 footer {
   width: 100%;
   background-color: var(--bgBlack);
-  .grid-wrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto 1fr;
-    width: 130rem;
-    margin: 0 auto;
-    row-gap: 6.25rem;
-    column-gap: 6.9rem;
-    #logo {
-      margin-top: 14.1rem;
-      width: 27rem;
-      height: 5rem;
-    }
-    .footer-body {
-      margin-top: 14.1rem;
-      grid-column: 2/5;
-      color: var(--fontWhite);
-      font-family: var(--font);
-      font-size: 2rem;
-      font-weight: 300;
-      line-height: 3.3rem; /* 165% */
-      letter-spacing: 0.08rem;
-      text-transform: uppercase;
-    }
-    .footer-item {
-      height: 26.6rem;
-    }
-    .footer-item-title {
-      color: var(--fontWhite);
-      font-family: var(--font);
-      font-size: 2.2rem;
-      font-weight: 700;
-      line-height: 3.8rem; /* 172.7% */
-      text-transform: uppercase;
-      margin-bottom: 1.5rem;
-    }
-    .footer-item-body {
-      color: var(--fontWhite);
-      font-family: var(--font);
-      font-size: 1.6rem;
-      font-weight: 300;
-      line-height: 2.8rem; /* 175% */
-      letter-spacing: 0.08rem;
-      display: flex;
-      flex-direction: column;
-    }   
-    #footer-workingHours {
-      .footer-item-body {
-        gap: 1.3rem;  
-      }
-    }
-    #footer-location {
-      .footer-item-body {
-        gap: 3.7rem;  
-      }
-    }
-    #footer-startNow {
-      .footer-item-title {
-        &::after {
-          content: "";
-          background-image: url(images/ico_arrow_7.svg);
-          display: inline-flex;
-          margin-left:1rem;
-          width: 1.63rem;
-          height: 1.63rem;
-        }
-      }
-      .icon-wrapper {
-        height: 2rem;
-        margin-top: 5rem;
-        display: flex;
-        gap: 1.88rem;
-        img {
-          height: 100%;
-        }
-      }
-      .btn-arrow {
-        width: 100%;
-      }
-      input {
-        border: none;
-      }
-    }
-    .footer-bottom-text {
-      padding:1.2rem 0;
-      grid-column: 1/5;
-      color: var(--fontWhite);
-      font-family: var(--font);
-      font-size: 1.4rem;
-      font-weight: 300;
-      line-height: 2.8rem; /* 200% */
-    }
-  }
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 14.1rem;
+}
+.footer__wrapper {
+  max-width: 130rem;
+  width: 67.7%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 6.5rem;
+  column-gap: 3rem;
+}
+.footer__logo {
+  width: 27rem;
+  height: 5rem;
+  object-fit: cover;
 }
 
+.footer__text {
+  grid-column: 2/5;
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 2rem;
+  font-weight: 300;
+  line-height: 3.3rem; /* 165% */
+  letter-spacing: 0.08rem;
+  text-transform: uppercase;
+}
+
+.footer__item {
+  height: 26.6rem;
+  flex: 1;
+}
+.footer__item__title {
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: 3.8rem; /* 172.7% */
+  text-transform: uppercase;
+  margin-bottom: 1.5rem;
+}
+.footer__item__body {
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 2.8rem; /* 175% */
+  letter-spacing: 0.08rem;
+  display: flex;
+  flex-direction: column;
+}
+#footer__item--about .footer__item__body {
+  gap: 1.3rem;
+}
+#footer__item--location .footer__item__body {
+  gap: 3.7rem;  
+}
+#footer__item--working-hours .footer__item__body {
+  white-space: nowrap;
+}
+#footer__item--start-now .footer__item__title::after {
+  content: "";
+  background-image: url(images/ico_arrow_7.svg);
+  display: inline-flex;
+  margin-left:1rem;
+  width: 1.63rem;
+  height: 1.63rem;    
+}
+.footer__item__icon-wrapper {
+  height: 2rem;
+  margin-top: 5rem;
+  display: flex;
+  gap: 1.88rem;
+}
+.footer__item__icon-wrapper img {
+  height: 2rem;
+}
+#footer__item--start-now .btn--arrow {
+  width: 100%;
+}
+#footer__item--start-now input {
+  border: none;
+}
+.footer__bottom-text {
+  grid-column: 1/5;
+  padding:1.2rem 0;
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 2.8rem; /* 200% */
+}
+@media all and (max-width: 1300px) {
+  .footer__wrapper {
+    row-gap: 3rem;
+  }
+  .footer__logo {
+    grid-column: 1/5;
+  }
+  .footer__text {
+    grid-column: 1/5;
+  }
+  .footer__item {
+    height: fit-content;
+  }
+  .footer-item-title {
+    margin-bottom: 1rem;
+  }
+
+  #footer__item--about {
+    grid-column: 1/3;
+  }
+  #footer__item--working-hours  {
+    grid-column: 3/5;
+  }
+
+  #footer__item--location  {
+    grid-column: 1/3;
+  }
+  #footer__item--location .footer__item__body {
+    gap: 1rem;
+  }
+  #footer__item--start-now {
+    grid-column: 1/5;
+  }
+  .footer__item__icon-wrapper{
+    margin-top: 1rem;
+  }
+  .footer__bottom-text {
+    grid-column: 1/5;
+  }
+}
+@media all and (max-width: 800px) {
+  
+  #footer__item--about, 
+  #footer__item--working-hours,
+  #footer__item--location, 
+  #footer__item--start-now {
+    grid-column: 1/5;
+  }
+}
 
 
 
