--- a/global.css
+++ b/global.css
@@ -237,3 +237,182 @@ header > .utility > #hamburger {
     position: fixed;
   }
 }
+
+
+/*==========================================
+	footer
+==========================================*/
+
+/* arrow button */
+.btn--arrow {
+  position: relative;
+  display: inline-flex;
+  align-items: flex-start;
+  border-radius: 3rem;
+  border: 1px solid var(--fontWhite);
+  cursor: pointer;
+  color: var(--fontWhite);
+  font-family: var(--font);
+}
+.btn--arrow::after{
+    content: "";
+    background: url("images/ico_viewMore.svg") no-repeat;
+    background-position: center center;
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    width: 5.4rem;
+    height: 5.4rem;
+    border-radius: 50%;
+    position: absolute;
+    right: 0;
+    top: -.1rem;
+    border: 1px solid var(--fontWhite);
+    transform: rotate(0deg);
+    transition: transform 1s ease;
+}
+.btn--arrow:hover::after {
+  transform: rotate(45deg);
+}
+
+footer {
+  width: 100%;
+  background-color: var(--bgBlack);
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 14.1rem;
+}
+.footer__wrapper {
+  max-width: 130rem;
+  width: 67.7%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 6.5rem;
+  column-gap: 3rem;
+}
+.footer__logo {
+  width: 27rem;
+  height: 5rem;
+  object-fit: cover;
+}
+.footer__text {
+  grid-column: 2/5;
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 2rem;
+  font-weight: 300;
+  line-height: 3.3rem; /* 165% */
+  letter-spacing: 0.08rem;
+  text-transform: uppercase;
+}
+.footer__item {
+  height: 26.6rem;
+  flex: 1;
+}
+.footer__item__title {
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: 3.8rem; /* 172.7% */
+  text-transform: uppercase;
+  margin-bottom: 1.5rem;
+}
+.footer__item__body {
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 2.8rem; /* 175% */
+  letter-spacing: 0.08rem;
+  display: flex;
+  flex-direction: column;
+}
+#footer__item--about .footer__item__body {
+  gap: 1.3rem;
+}
+#footer__item--location .footer__item__body {
+  gap: 3.7rem;  
+}
+#footer__item--working-hours .footer__item__body {
+  white-space: nowrap;
+}
+#footer__item--start-now .footer__item__title::after {
+  content: "";
+  background-image: url(images/ico_arrow_7.svg);
+  display: inline-flex;
+  margin-left:1rem;
+  width: 1.63rem;
+  height: 1.63rem;    
+}
+.footer__item__icon-wrapper {
+  height: 2rem;
+  margin-top: 5rem;
+  display: flex;
+  gap: 1.88rem;
+}
+.footer__item__icon-wrapper img {
+  height: 2rem;
+}
+#footer__item--start-now .btn--arrow {
+  width: 100%;
+}
+#footer__item--start-now input {
+  border: none;
+}
+.footer__bottom-text {
+  grid-column: 1/5;
+  padding:1.2rem 0;
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 2.8rem; /* 200% */
+}
+@media all and (max-width: 1300px) {
+  .footer__wrapper {
+    row-gap: 3rem;
+  }
+  .footer__logo {
+    grid-column: 1/5;
+  }
+  .footer__text {
+    grid-column: 1/5;
+  }
+  .footer__item {
+    height: fit-content;
+  }
+  .footer-item-title {
+    margin-bottom: 1rem;
+  }
+  #footer__item--about {
+    grid-column: 1/3;
+  }
+  #footer__item--working-hours  {
+    grid-column: 3/5;
+  }
+  #footer__item--location  {
+    grid-column: 1/3;
+  }
+  #footer__item--location .footer__item__body {
+    gap: 1rem;
+  }
+  #footer__item--start-now {
+    grid-column: 1/5;
+  }
+  .footer__item__icon-wrapper{
+    margin-top: 1rem;
+  }
+  .footer__bottom-text {
+    grid-column: 1/5;
+  }
+}
+@media all and (max-width: 800px) {
+  #footer__item--about, 
+  #footer__item--working-hours,
+  #footer__item--location, 
+  #footer__item--start-now {
+    grid-column: 1/5;
+  }
+}
