--- a/pages/sub3/sub3.css
+++ b/pages/sub3/sub3.css
@@ -1067,4 +1067,11 @@ section{
         width: 3.4rem;
         height: 3.4rem;
     }
+    .training_discImgboxes {
+        padding: 1rem 0;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+    
 }
